2007-12-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Removed the reload target from the dhcp script since dhcpd
	  does not support reloading with SIGHUP.

2007-10-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Changed the gdm, gpm, haldaemon and ntp scripts to reference
	  their pid files in /var/run for all operations.

2007-10-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Fixed the samba and sshd scripts to reference the pid files in
	  /var/run. This ensures that the correct processes are killed and
	  queried. Also changed the dbus script to use the pid file in the
	  status target, too.

2007-08-22 DJ Lucas <dj@linuxfromscratch.org>
	* Updated the dhcpcd service script to comply with dhcpcd-3.0.19+.

2007-07-09 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Updated the D-Bus bootscript to call dbus-uuidgen on start and
	  use the system pid file.

2007-07-08 Randy McMurchy <randy@linuxfromscratch.org>
	* Update the CUPS section of the Makefile to remove the proper
	  files (upstream changed the S/K naming)

2007-06-20 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Update lease info path for dhcpcd-3.x.

2007-06-20 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Use proper references for the pid and lease files in the dhcpcd
	  service script.

2006-10-11 Dan Nicholson <dnicholson@linuxfromscratch.org>
	* Fixed gpm boot script to accept multiple arguments in the
	  variables, particularly GPMOPTS. Thanks to Christoph Felkes
	  for supplying the fix.

2006-06-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
	* Updated the openldap and nfs-server scripts to pass appropriate
	  signals to the stop functions.  This change was due to changes
	  in the LFS functions script on 2/06/05!

2006-06-24 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the HAL script to work with HAL-0.5.7

2006-06-23 Randy McMurchy <randy@linuxfromscratch.org>
	* Updated the GDM script to the 2.14.2 version of GNOME
