@@ -42,6 +42,15 @@
 -->
 
     <listitem>
+      <para>March 7th, 2008</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Fixed autofs bootscript.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>March 6th, 2008</para>
       <itemizedlist>
         <listitem>
