@@ -1,3 +1,6 @@
+2008-03-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+  * Fixed calls in autofs to echo_failure
+
 2007-12-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
 	* Removed the reload target from the dhcp script since dhcpd
 	  does not support reloading with SIGHUP.
